--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "start": "node server.js" 
   },
   "dependencies": {
     "@popperjs/core": "^2.6.0",
@@ -17,8 +18,10 @@
     "bootstrap-icons": "^1.2.1",
     "bootstrap-vue": "^2.21.0",
     "core-js": "^3.6.5",
+    "express": "^4.17.1",
     "jquery": "^3.5.1",
     "portal-vue": "^2.1.7",
+    "serve-static": "^1.14.1",
     "vue": "^2.6.11",
     "vue-headful": "^2.1.0",
     "vue-kinesis": "^1.1.7",
