--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "start": "node server.js" 
+    "start": "node server.js"
   },
   "dependencies": {
     "@popperjs/core": "^2.6.0",
@@ -23,6 +23,7 @@
     "portal-vue": "^2.1.7",
     "serve-static": "^1.14.1",
     "vue": "^2.6.11",
+    "vue-avatar": "^2.3.3",
     "vue-headful": "^2.1.0",
     "vue-kinesis": "^1.1.7",
     "vue-router": "^3.2.0",
